@startuml supervision_tree
!theme plain

' Top-level supervisor

' RoomsSupervisor dynamically supervises ChatRoomSupervisors


@startuml supervision_tree
!theme plain

class MultiRoomChat.Supervisor
class MultiRoomChat.Server
class MultiRoomChat.UserRegistry
class RoomDirectory
class MultiRoomChat.RoomsSupervisor
class MultiRoomChat.ChatRoomSupervisor
class MultiRoomChat.ChatRoomServer

MultiRoomChat.Supervisor --> MultiRoomChat.Server
MultiRoomChat.Supervisor --> MultiRoomChat.UserRegistry
MultiRoomChat.Supervisor --> MultiRoomChat.RoomsSupervisor

MultiRoomChat.RoomsSupervisor --> MultiRoomChat.ChatRoomSupervisor : dynamic
MultiRoomChat.RoomsSupervisor --> RoomDirectory
MultiRoomChat.ChatRoomSupervisor --> MultiRoomChat.ChatRoomServer
@enduml

@enduml
